--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -37,12 +37,7 @@
 }
 
 .bottomAngle-svg {
-    position: relative;
     bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
     transform: rotate(180deg);
 }
 
